Segunda practica agregada

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,5 +22,6 @@
     \n\nEstare feliz de enseñarte como comer tacos
     \nAunque tal vez no deberias pagar tu.\n\n</string>
     <string name="micro">Microfonito</string>
+    <string name="what_is_your_nickname">What is your Nickname?</string>
 
 </resources>
